--- a/BaseService/src/main/resources/application.properties
+++ b/BaseService/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9002
 eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone=http://localhost:9761/eureka/
 
-spring.datasource.url=jdbc:mysql://localhost:3306/base_db
+spring.datasource.url=jdbc:mysql://localhost:3306/samu_base
 spring.datasource.username=root
 spring.datasource.password=root_password
 spring.jpa.hibernate.ddl-auto=update
