--- a/ViaturaService/src/main/resources/application.properties
+++ b/ViaturaService/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9001
 eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone=http://localhost:9761/eureka/
 
-spring.datasource.url=jdbc:mysql://localhost:3306/viatura
+spring.datasource.url=jdbc:mysql://localhost:3306/samu_viatura
 spring.datasource.username=root
 spring.datasource.password=root_password
 spring.jpa.hibernate.ddl-auto=update
