--- a/AuthService/src/main/resources/application.properties
+++ b/AuthService/src/main/resources/application.properties
@@ -1,1 +1,13 @@
-spring.application.name=AuthService
+spring.application.name=auth
+server.port=9008
+
+jwt.secret=${SECRET}
+jwt.expire=864000
+
+spring.datasource.url=jdbc:mysql://localhost:3306/samu_users
+spring.datasource.username=root
+spring.datasource.password=root_password
+spring.jpa.hibernate.ddl-auto=update
+
+eureka.instance.hostname=localhost
+eureka.client.service-url.defaultZone=http://localhost:9761/eureka/
