--- a/GatewayService/src/main/resources/application.properties
+++ b/GatewayService/src/main/resources/application.properties
@@ -2,9 +2,12 @@ spring.application.name=gateway
 
 server.port=8765
 
+jwt.secret=${SECRET}
+
 eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone=http://localhost:9761/eureka/
 eureka.instance.prefer-ip-address=true
 
 spring.cloud.gateway.server.webflux.discovery.locator.enabled=true
 spring.cloud.gateway.server.webflux.discovery.locator.lower-case-service-id=true
+
