Refactor application properties and update repository methods for checklist validation

--- a/AvaliacaoBases_Back/AuthService/pom.xml
+++ b/AvaliacaoBases_Back/AuthService/pom.xml
@@ -115,7 +115,7 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                         </path>
-                    </annotationProcessorPaths>
+                    </annotationProcessorPaths><source>24</source><target>24</target><compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
