--- a/AvaliacaoBases_Back/ArquivoMidia/src/main/resources/application.properties
+++ b/AvaliacaoBases_Back/ArquivoMidia/src/main/resources/application.properties
@@ -1,12 +1,7 @@
 spring.application.name=arquivo
 server.port=9007
 
-spring.datasource.url=jdbc:mysql://localhost:3306/samu_midias
-spring.datasource.username=root
-spring.datasource.password=root_password
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.client.service-url.defaultZone=http://localhost:9761/eureka/
-eureka.instance.hostname=localhost
-
+spring.profiles.active=dev
 
