--- a/AvaliacaoBases_Back/AuthService/src/main/resources/application.properties
+++ b/AvaliacaoBases_Back/AuthService/src/main/resources/application.properties
@@ -4,10 +4,6 @@ server.port=9008
 jwt.secret=${SECRET}
 jwt.expire=864000
 
-spring.datasource.url=jdbc:mysql://localhost:3306/samu_users
-spring.datasource.username=root
-spring.datasource.password=root_password
 spring.jpa.hibernate.ddl-auto=update
 
-eureka.instance.hostname=localhost
-eureka.client.service-url.defaultZone=http://localhost:9761/eureka/
+spring.profiles.active=dev
