--- a/AvaliacaoBases_Back/AvaliacaoService/src/main/resources/application.properties
+++ b/AvaliacaoBases_Back/AvaliacaoService/src/main/resources/application.properties
@@ -1,13 +1,6 @@
 spring.application.name=Avaliacao
-
 server.port=9005
 
-eureka.instance.hostname=localhost
-eureka.client.service-url.defaultZone=http://localhost:9761/eureka/
-
-spring.datasource.url=jdbc:mysql://localhost:3306/samu_avaliacao
-spring.datasource.username=root
-spring.datasource.password=root_password
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
 
+spring.profiles.active=dev
