--- a/AvaliacaoBases_Back/BaseService/src/main/resources/application.properties
+++ b/AvaliacaoBases_Back/BaseService/src/main/resources/application.properties
@@ -1,11 +1,6 @@
 spring.application.name=Base
 server.port=9002
 
-eureka.instance.hostname=localhost
-eureka.client.service-url.defaultZone=http://localhost:9761/eureka/
-
-spring.datasource.url=jdbc:mysql://localhost:3306/samu_base
-spring.datasource.username=root
-spring.datasource.password=root_password
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+
+spring.profiles.active=dev
