--- a/AvaliacaoBases_Back/CheckListItemService/src/main/resources/application.properties
+++ b/AvaliacaoBases_Back/CheckListItemService/src/main/resources/application.properties
@@ -1,12 +1,6 @@
 spring.application.name=CheckList
 server.port=9004
 
-eureka.instance.hostname=localhost
-eureka.client.service-url.defaultZone=http://localhost:9761/eureka/
-
-spring.datasource.url=jdbc:mysql://localhost:3306/samu_checklist
-spring.datasource.username=root
-spring.datasource.password=root_password
 spring.jpa.hibernate.ddl-auto=update
 
-
+spring.profiles.active=dev
