--- a/AvaliacaoBases_Back/RelatorioService/src/main/resources/application.properties
+++ b/AvaliacaoBases_Back/RelatorioService/src/main/resources/application.properties
@@ -1,11 +1,6 @@
 spring.application.name=relatorio
 server.port=9006
-gateway.url=http://localhost:8765
 
-eureka.instance.hostname=localhost
-eureka.client.service-url.defaultZone=http://localhost:9761/eureka/
-
-spring.datasource.url=jdbc:mysql://localhost:3306/samu_relatorio
-spring.datasource.username=root
-spring.datasource.password=root_password
 spring.jpa.hibernate.ddl-auto=update
+
+spring.profiles.active=dev
