Remove references to 'ProjetoUnificado' from configuration files and update module targets

--- a/AvaliacaoBases_Back/AuthService/pom.xml
+++ b/AvaliacaoBases_Back/AuthService/pom.xml
@@ -115,7 +115,7 @@
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
                         </path>
-                    </annotationProcessorPaths><source>24</source><target>24</target><compilerArgs>--enable-preview</compilerArgs>
+                    </annotationProcessorPaths><source>24</source><target>24</target>
                 </configuration>
             </plugin>
             <plugin>
