Refactor authentication logic and enhance cookie handling in UserController

--- a/AvaliacaoBases_Back/AuthService/src/main/resources/application-dev.properties
+++ b/AvaliacaoBases_Back/AuthService/src/main/resources/application-dev.properties
@@ -4,3 +4,6 @@ spring.datasource.password=root_password
 
 eureka.instance.hostname=localhost
 eureka.client.service-url.defaultZone=http://localhost:9761/eureka/
+
+app.cookie.secure=true
+app.cookie.samesite=Strict
