--- a/AvaliacaoBases_Back/AuthService/src/main/resources/application-prod.properties
+++ b/AvaliacaoBases_Back/AuthService/src/main/resources/application-prod.properties
@@ -4,3 +4,6 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 eureka.client.service-url.defaultZone=http://discoveryservice:9761/eureka/
 eureka.instance.prefer-ip-address=true
+
+app.cookie.secure=false
+app.cookie.samesite=None
