--- a/AvaliacaoBases_Back/AuthService/src/main/resources/application.properties
+++ b/AvaliacaoBases_Back/AuthService/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=auth
 server.port=9008
 
 jwt.secret=${SECRET}
-jwt.expire=864000
+jwt.expire=864000000
 
 spring.jpa.hibernate.ddl-auto=update
 
