--- a/AvaliacaoBases_Back/FormsService/pom.xml
+++ b/AvaliacaoBases_Back/FormsService/pom.xml
@@ -83,6 +83,11 @@
             <version>3.49.3</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
     <dependencyManagement>
         <dependencies>
