--- a/AvaliacaoBases_Back/ArquivoMidia/src/main/resources/application.properties
+++ b/AvaliacaoBases_Back/ArquivoMidia/src/main/resources/application.properties
@@ -5,3 +5,10 @@ spring.jpa.hibernate.ddl-auto=update
 
 spring.profiles.active=dev
 
+spring.servlet.multipart.max-file-size=20MB
+spring.servlet.multipart.max-request-size=20MB
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.resolve-lazily=true
+
+# Configuração do diretório de upload
+app.upload.dir=${UPLOAD_DIR:./uploads}
