--- a/AvaliacaoBases_Back/InspecaoService/src/main/resources/application-dev.properties
+++ b/AvaliacaoBases_Back/InspecaoService/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/samu_checklist
+spring.datasource.url=jdbc:mysql://localhost:3306/samu_inspecao
 spring.datasource.username=root
 spring.datasource.password=root_password
 
