feat: add initial project configuration files; include VCS mappings, ignore patterns, and migration states

--- a/avaliacaobases_front/package.json
+++ b/avaliacaobases_front/package.json
@@ -12,10 +12,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
-    "@mui/material": "^7.3.2",
+    "@mui/lab": "^7.0.1-beta.18",
+    "@mui/material": "^7.3.4",
     "@mui/x-data-grid": "^8.10.2",
-    "@mui/x-date-pickers": "^8.10.2",
+    "@mui/x-date-pickers": "^8.11.3",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
