feat: update dependencies and add new API routes
- Added new dependencies: chart.js, d3, d3-cloud, d3-scale-chromatic, and tippy.js.
- Updated the POST handler in `route.ts` for answers/all to directly send visitIds as an array.
- Removed the obsolete visit/[visitaId] route file.
- Changed tsconfig to use "preserve" for JSX.
- Implemented new API routes for answers/field/[campoId] and answers/fields with appropriate proxyFetch logic.

--- a/avaliacaobases_front/package.json
+++ b/avaliacaobases_front/package.json
@@ -16,15 +16,21 @@
     "@mui/material": "^7.3.4",
     "@mui/x-data-grid": "^8.10.2",
     "@mui/x-date-pickers": "^8.11.3",
+    "chart.js": "^4.5.1",
+    "d3": "^7.9.0",
+    "d3-cloud": "^1.2.7",
+    "d3-scale-chromatic": "^3.1.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
     "next": "15.4.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "recharts": "^3.2.0"
+    "recharts": "^3.2.0",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/d3": "^7.4.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
