--- a/avaliacaobases_front/package.json
+++ b/avaliacaobases_front/package.json
@@ -22,7 +22,7 @@
     "d3-scale-chromatic": "^3.1.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.18",
-    "next": "15.4.6",
+    "next": "^15.5.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "recharts": "^3.2.0",
