fix: ensure eureka.instance.hostname is set correctly in production properties

--- a/AvaliacaoBases_Back/AvaliacaoService/src/main/resources/application-prod.properties
+++ b/AvaliacaoBases_Back/AvaliacaoService/src/main/resources/application-prod.properties
@@ -4,6 +4,7 @@ spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 eureka.client.service-url.defaultZone=http://discoveryservice:9761/eureka/
 eureka.instance.prefer-ip-address=true
+eureka.instance.hostname=${HOSTNAME}
 
 app.cookie.secure=true
 app.cookie.samesite=Strict
